Fix alignment of our sectors

--- a/media/abrs/css/style.css
+++ b/media/abrs/css/style.css
@@ -199,36 +199,37 @@ transition: all 0.3s ease-in-out;}
 }
 #btn-widget-search:hover {background-color:#333;}
 #widget-search input[type="text"] {
-    border: 1px solid #ececec;
-    -webkit-box-shadow: none;
+  border: 1px solid #ececec;
+  -webkit-box-shadow: none;
 	box-shadow: none !important;
-    height: 46px;
-    line-height: normal;
-    padding: 13px 15px;
+  height: 46px;
+  line-height: normal;
+  padding: 13px 15px;
 	appearance: none !important;
 	-webkit-appearance: none !important;
--moz-appearance: none;
--o-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
 }
-#widget-search select {-webkit-appearance: none;
--moz-appearance: none;
--o-appearance: none;
-appearance: none;
-background-color: transparent;
-background-image: none;
-border:none;
-box-shadow: none;
-color: #868686;
-line-height: 1;
-outline: 0;
-overflow: hidden;
-position: relative;
-text-indent: 1px;
-text-overflow: '';
-height: 46px;
-padding: 13px 15px;
-width:100%;
-cursor:pointer;
+#widget-search select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  background-image: none;
+  border:none;
+  box-shadow: none;
+  color: #868686;
+  line-height: 1;
+  outline: 0;
+  overflow: hidden;
+  position: relative;
+  text-indent: 1px;
+  text-overflow: '';
+  height: 46px;
+  padding: 13px 15px;
+  width:100%;
+  cursor:pointer;
 }
 #widget-search .custom-select {
   background: initial;
